Move change resolution control right to prevent overlap with toolbar in short browser windows

--- a/svg-edit-layout/editor/svg-editor.css
+++ b/svg-edit-layout/editor/svg-editor.css
@@ -253,7 +253,7 @@ div.color_block {
 
 #svg_editor #footer {
 	position: absolute;
-	left: 2px;
+	left: 75px;
 	right: 2px;
 	bottom: 2px;
 	height: 20px;
